# ZzFX-C

./: Build.sh  BuildDebianPkg.sh  CLI.sh  CMakeLists.txt  GUI.sh  README.md  good_sounds.txt  version.py
.github/workflows/: main-ci.yml
cli/: CMakeLists.txt
cli/src/: main.c
core/: CMakeLists.txt
core/include/: ZzFX.h  ZzFX_version.h
core/src/: ZzFX.c
openal_backend/: CMakeLists.txt
openal_backend/include/: openAL.h
openal_backend/src/: ObjectPool.c  openAL.c
python/: cli.py  gui.py  zzfx.py  zzfx_cli  zzfx_gui  zzfx_gui.py  zzfx_gui_lib.py
